--- a/account-settings.html
+++ b/account-settings.html
@@ -230,7 +230,7 @@
                                           title="Jose Angelo"
                                         />
                                       </div>
-                                      <div class="_mf1jwf">
+                                      <div class="site-content__content-list-header">
                                         <h1
                                           class="_1aflf3g"
                                           id="FMP-target"
@@ -1129,7 +1129,7 @@
                                   class="heading"
                                   elementtiming="LCP-target"
                                 >
-                                  <div class="_mf1jwf" tabindex="-1">
+                                  <div class="site-content__content-list-header" tabindex="-1">
                                     Account
                                   </div>
                                 </h1>
