--- a/basics.html
+++ b/basics.html
@@ -174,7 +174,7 @@
                                         data-veloute="city"
                                         onclick="window.location.href='basics.html';"
                                       >
-                                        <div class="_194uxgy3">
+                                        <div class="app-theme__sidebar-expandable-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">Basics</div>
                                           <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
@@ -239,7 +239,7 @@
                               id="What we're looking for-section-row"
                             >
                               <div
-                                class="_1mw07zbp"
+                                class="app-theme__sidebar-menu-wrapper"
                                 role="button"
                                 aria-disabled="true"
                                 aria-expanded="false"
@@ -271,8 +271,8 @@
                                 >
                                   What we're looking for
                                 </div>
-                                <div class="_kckm7tm">
-                                  <div class="_1rhpnva">
+                                <div class="app-theme__sidebar-icon-wrapper">
+                                  <div class="app-theme__sidebar-icon-content">
                                     <svg
                                       xmlns="http://www.w3.org/2000/svg"
                                       viewBox="0 0 16 16"
@@ -301,7 +301,7 @@
                               id="Experience page-section-row"
                             >
                               <div
-                                class="_1mw07zbp"
+                                class="app-theme__sidebar-menu-wrapper"
                                 role="button"
                                 aria-disabled="true"
                                 aria-expanded="false"
@@ -333,8 +333,8 @@
                                 >
                                   Experience page
                                 </div>
-                                <div class="_kckm7tm">
-                                  <div class="_1rhpnva">
+                                <div class="app-theme__sidebar-icon-wrapper">
+                                  <div class="app-theme__sidebar-icon-content">
                                     <svg
                                       xmlns="http://www.w3.org/2000/svg"
                                       viewBox="0 0 16 16"
@@ -360,7 +360,7 @@
                           <div>
                             <div class="dir dir-ltr" id="Settings-section-row">
                               <div
-                                class="_1pjtly9"
+                                class="setting-section__menu-wrap"
                                 role="button"
                                 aria-disabled="false"
                                 aria-expanded="false"
@@ -401,7 +401,7 @@
                               id="Safety guidelines-section-row"
                             >
                               <div
-                                class="_1mw07zbp"
+                                class="app-theme__sidebar-menu-wrapper"
                                 role="button"
                                 aria-disabled="true"
                                 aria-expanded="false"
@@ -433,8 +433,8 @@
                                 >
                                   Safety guidelines
                                 </div>
-                                <div class="_kckm7tm">
-                                  <div class="_1rhpnva">
+                                <div class="app-theme__sidebar-icon-wrapper">
+                                  <div class="app-theme__sidebar-icon-content">
                                     <svg
                                       xmlns="http://www.w3.org/2000/svg"
                                       viewBox="0 0 16 16"
@@ -463,7 +463,7 @@
                               id="Your submission-section-row"
                             >
                               <div
-                                class="_1mw07zbp"
+                                class="app-theme__sidebar-menu-wrapper"
                                 role="button"
                                 aria-disabled="true"
                                 aria-expanded="false"
@@ -495,8 +495,8 @@
                                 >
                                   Your submission
                                 </div>
-                                <div class="_kckm7tm">
-                                  <div class="_1rhpnva">
+                                <div class="app-theme__sidebar-icon-wrapper">
+                                  <div class="app-theme__sidebar-icon-content">
                                     <svg
                                       xmlns="http://www.w3.org/2000/svg"
                                       viewBox="0 0 16 16"
@@ -526,15 +526,15 @@
                 </div>
               </div>
               <main id="site-content">
-                <div class="_qss9kbx">
-                  <div class="_8h9q1b" id="lyt-page-container">
-                    <div id="lyt-main-header" class="_1ob7wrd">
+                <div class="site-content__page-wrapper">
+                  <div class="site-content__page-container" id="lyt-page-container">
+                    <div id="lyt-main-header" class="site-content__page-header">
                       <div class="header__logo">
                         <button
                           id="side-nav-toggle"
                           aria-expanded="true"
                           type="button"
-                          class="_m1y9te"
+                          class="header__logo-btn"
                         >
                           <span class="box-border"
                             ><svg
@@ -558,16 +558,16 @@
                           </span>
                         </button>
                       </div>
-                      <div class="_g7lz6c">Basics</div>
+                      <div class="header__logo-btn-text">Basics</div>
                     </div>
-                    <section class="_92ham2">
+                    <section class="site-content__page-content">
                       <div class="vh-100">
-                        <div class="_czq6d5">
-                          <div class="_1j6mvlwv">
-                            <div class="_foa5ri">
+                        <div class="site-content__page-content-wrapper">
+                          <div class="site-content__content-wrapper">
+                            <div class="site-content__content-list">
                               <section>
                                 <div class="box-border">
-                                  <div class="_mf1jwf">
+                                  <div class="site-content__content-list-header">
                                     <h1
                                       id="FMP-target"
                                       tabindex="-1"
@@ -580,7 +580,7 @@
                                 </div>
                               </section>
                             </div>
-                            <div class="_v08k6k">
+                            <div class="site-content__content-menu">
                               <fieldset class="_25bp3z">
                                 <legend class="_1wjt7fx">
                                   <div class="_1wlfjr">
@@ -866,19 +866,19 @@
                             </div>
                           </div>
                         </div>
-                        <footer class="_1jkbg3x">
-                          <div class="_1ugaxv">
+                        <footer class="footer__item-list">
+                          <div class="footer__item-list-wrapper">
                             <div aria-hidden="true">
-                              <div class="_mhow73">
-                                <div class="_hgs47m">
-                                  <div class="_10ejfg4u">
-                                    <div class="_r4xoi70">
+                              <div class="footer__item-progress">
+                                <div class="footer__progress-active-wrapper">
+                                  <div class="footer__progress-active-content">
+                                    <div class="footer__progress-active-bar">
                                       <div
                                         role="progressbar"
                                         aria-valuenow="1"
                                         aria-valuemin="0"
                                         aria-valuemax="23"
-                                        class="_1n5rojs1"
+                                        class="footer__progressbar"
                                         style="
                                           transform: translate3d(
                                             -96%,
@@ -893,7 +893,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_13duxcu">
+                          <div class="footer__progressbar-inactive">
                             <button
                               id="lyt-back-button"
                               type="button"
@@ -902,8 +902,8 @@
                               Back
                             </button>
                             <div data-showat="largeAndAbove">
-                              <div class="_1yid1zh">
-                                <div class="_1jxswo5">22 items to submit</div>
+                              <div class="footer__progressbar-status-wrap">
+                                <div class="footer__progressbar-status-text">22 items to submit</div>
                               </div>
                             </div>
                             <button
@@ -920,7 +920,7 @@
                       </div>
                     </section>
                   </div>
-                  <div class="_pjq3gx"></div>
+                  <div class="site-main__spacer"></div>
                 </div>
               </main>
             </div>
