--- a/become-a-host/privacy-type.html
+++ b/become-a-host/privacy-type.html
@@ -177,7 +177,7 @@
                               theme="[object Object]"
                             >
                               <div class="_1o7kvyb">
-                                <div class="_19uq0tn">An entire place</div>
+                                <div class="site-content__menu-header">An entire place</div>
                               </div>
                             </button>
                           </div>
@@ -193,7 +193,7 @@
                               theme="[object Object]"
                             >
                               <div class="_1o7kvyb">
-                                <div class="_19uq0tn">A private room</div>
+                                <div class="site-content__menu-header">A private room</div>
                               </div>
                             </button>
                           </div>
@@ -209,7 +209,7 @@
                               theme="[object Object]"
                             >
                               <div class="_1o7kvyb">
-                                <div class="_19uq0tn">A shared room</div>
+                                <div class="site-content__menu-header">A shared room</div>
                               </div>
                             </button>
                           </div>
