--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -177,7 +177,7 @@
                               theme="[object Object]"
                             >
                               <div class="_1p10xl4a">
-                                <div class="_19uq0tn">Apartment</div>
+                                <div class="site-content__menu-header">Apartment</div>
                               </div>
                               <div class="_1mplld7">
                                 <div
@@ -228,7 +228,7 @@
                               theme="[object Object]"
                             >
                               <div class="_1p10xl4a">
-                                <div class="_19uq0tn">House</div>
+                                <div class="site-content__menu-header">House</div>
                               </div>
                               <div class="_1mplld7">
                                 <div
@@ -279,7 +279,7 @@
                               theme="[object Object]"
                             >
                               <div class="_1p10xl4a">
-                                <div class="_19uq0tn">Secondary unit</div>
+                                <div class="site-content__menu-header">Secondary unit</div>
                               </div>
                               <div class="_1mplld7">
                                 <div
@@ -330,7 +330,7 @@
                               theme="[object Object]"
                             >
                               <div class="_1p10xl4a">
-                                <div class="_19uq0tn">Unique space</div>
+                                <div class="site-content__menu-header">Unique space</div>
                               </div>
                               <div class="_1mplld7">
                                 <div
@@ -381,7 +381,7 @@
                               theme="[object Object]"
                             >
                               <div class="_1p10xl4a">
-                                <div class="_19uq0tn">Bed and breakfast</div>
+                                <div class="site-content__menu-header">Bed and breakfast</div>
                               </div>
                               <div class="_1mplld7">
                                 <div
@@ -432,7 +432,7 @@
                               theme="[object Object]"
                             >
                               <div class="_1p10xl4a">
-                                <div class="_19uq0tn">Boutique hotel</div>
+                                <div class="site-content__menu-header">Boutique hotel</div>
                               </div>
                               <div class="_1mplld7">
                                 <div
