--- a/become-a-host/property-type.html
+++ b/become-a-host/property-type.html
@@ -176,9 +176,9 @@
                               aria-checked="true"
                               theme="[object Object]"
                             >
-                              <div class="_114nnaka">
-                                <div class="_19uq0tn">Rental unit</div>
-                                <div class="_epst94">
+                              <div class="site-content__content-menu-list">
+                                <div class="site-content__menu-header">Rental unit</div>
+                                <div class="site-content__menu-desc">
                                   A rented place within a multi-unit residential
                                   building or complex.
                                 </div>
@@ -196,9 +196,9 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_114nnaka">
-                                <div class="_19uq0tn">Condo</div>
-                                <div class="_epst94">
+                              <div class="site-content__content-menu-list">
+                                <div class="site-content__menu-header">Condo</div>
+                                <div class="site-content__menu-desc">
                                   A place within a multi-unit building or
                                   complex owned by the residents.
                                 </div>
@@ -216,9 +216,9 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_114nnaka">
-                                <div class="_19uq0tn">Loft</div>
-                                <div class="_epst94">
+                              <div class="site-content__content-menu-list">
+                                <div class="site-content__menu-header">Loft</div>
+                                <div class="site-content__menu-desc">
                                   An open layout apartment or condo, which may
                                   have short interior walls.
                                 </div>
@@ -236,9 +236,9 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_114nnaka">
-                                <div class="_19uq0tn">Serviced apartment</div>
-                                <div class="_epst94">
+                              <div class="site-content__content-menu-list">
+                                <div class="site-content__menu-header">Serviced apartment</div>
+                                <div class="site-content__menu-desc">
                                   An apartment with hotel-like amenities
                                   serviced by a professional management company.
                                 </div>
@@ -256,9 +256,9 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_114nnaka">
-                                <div class="_19uq0tn">Casa particular</div>
-                                <div class="_epst94">
+                              <div class="site-content__content-menu-list">
+                                <div class="site-content__menu-header">Casa particular</div>
+                                <div class="site-content__menu-desc">
                                   A private room in a Cuban home that feels like
                                   a bed and breakfast.
                                 </div>
@@ -276,9 +276,9 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_114nnaka">
-                                <div class="_19uq0tn">Vacation home</div>
-                                <div class="_epst94">
+                              <div class="site-content__content-menu-list">
+                                <div class="site-content__menu-header">Vacation home</div>
+                                <div class="site-content__menu-desc">
                                   A furnished rental property that includes a
                                   kitchen and bathroom and may offer some guest
                                   services, like a reception desk.
