--- a/dashboard.html
+++ b/dashboard.html
@@ -410,12 +410,12 @@
         padding-top: 24px !important;
         padding-bottom: 24px !important;
       }
-      ._hgs47m {
+      .footer__progress-active-wrapper {
         display: table !important;
         width: 100% !important;
         border-spacing: 0px !important;
       }
-      ._10ejfg4u {
+      .footer__progress-active-content {
         display: table-cell !important;
         width: 100% !important;
         vertical-align: middle !important;
