--- a/edit/what.html
+++ b/edit/what.html
@@ -227,7 +227,7 @@
                               id="General settings-section-row"
                             >
                               <div
-                                class="_1pjtly9"
+                                class="setting-section__menu-wrap"
                                 role="button"
                                 aria-disabled="false"
                                 aria-expanded="false"
@@ -259,7 +259,7 @@
                                 >
                                   General settings
                                 </div>
-                                <div class="_kckm7tm">
+                                <div class="app-theme__sidebar-icon-wrapper">
                                   <span class="_xb1ud6">3 NEW</span>
                                 </div>
                               </div>
@@ -271,7 +271,7 @@
                               id="Price settings-section-row"
                             >
                               <div
-                                class="_1pjtly9"
+                                class="setting-section__menu-wrap"
                                 role="button"
                                 aria-disabled="false"
                                 aria-expanded="false"
@@ -303,7 +303,7 @@
                                 >
                                   Price settings
                                 </div>
-                                <div class="_kckm7tm">
+                                <div class="app-theme__sidebar-icon-wrapper">
                                   <span class="_xb1ud6">1 NEW</span>
                                 </div>
                               </div>
@@ -316,15 +316,15 @@
                 </div>
               </div>
               <main id="site-content">
-                <div class="_qss9kbx">
-                  <div class="_8h9q1b" id="lyt-page-container">
-                    <div id="lyt-main-header" class="_1ob7wrd">
+                <div class="site-content__page-wrapper">
+                  <div class="site-content__page-container" id="lyt-page-container">
+                    <div id="lyt-main-header" class="site-content__page-header">
                       <div class="header__logo">
                         <button
                           id="side-nav-toggle"
                           aria-expanded="true"
                           type="button"
-                          class="_m1y9te"
+                          class="header__logo-btn"
                         >
                           <span class="box-border"
                             ><svg
@@ -348,9 +348,9 @@
                           </span>
                         </button>
                       </div>
-                      <div class="_g7lz6c">What we’ll do</div>
+                      <div class="header__logo-btn-text">What we’ll do</div>
                     </div>
-                    <section class="_92ham2">
+                    <section class="site-content__page-content">
                       <div
                         class="_1p3gdcm"
                         id="myx-container"
@@ -890,7 +890,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                       </div>
                     </section>
                   </div>
-                  <div class="_pjq3gx"></div>
+                  <div class="site-main__spacer"></div>
                 </div>
               </main>
             </div>
