--- a/experienceType.html
+++ b/experienceType.html
@@ -2695,7 +2695,7 @@
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="experience-type"
                                       >
-                                        <div class="_194uxgy3">
+                                        <div class="app-theme__sidebar-expandable-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
                                             Experience type
                                           </div>
@@ -2793,7 +2793,7 @@
                               id="What we're looking for-section-row"
                             >
                               <div
-                                class="_1mw07zbp"
+                                class="app-theme__sidebar-menu-wrapper"
                                 role="button"
                                 aria-disabled="true"
                                 aria-expanded="false"
@@ -2825,8 +2825,8 @@
                                 >
                                   What we're looking for
                                 </div>
-                                <div class="_kckm7tm">
-                                  <div class="_1rhpnva">
+                                <div class="app-theme__sidebar-icon-wrapper">
+                                  <div class="app-theme__sidebar-icon-content">
                                     <svg
                                       xmlns="http://www.w3.org/2000/svg"
                                       viewBox="0 0 16 16"
@@ -2855,7 +2855,7 @@
                               id="Experience page-section-row"
                             >
                               <div
-                                class="_1mw07zbp"
+                                class="app-theme__sidebar-menu-wrapper"
                                 role="button"
                                 aria-disabled="true"
                                 aria-expanded="false"
@@ -2887,8 +2887,8 @@
                                 >
                                   Experience page
                                 </div>
-                                <div class="_kckm7tm">
-                                  <div class="_1rhpnva">
+                                <div class="app-theme__sidebar-icon-wrapper">
+                                  <div class="app-theme__sidebar-icon-content">
                                     <svg
                                       xmlns="http://www.w3.org/2000/svg"
                                       viewBox="0 0 16 16"
@@ -2914,7 +2914,7 @@
                           <div>
                             <div class="dir dir-ltr" id="Settings-section-row">
                               <div
-                                class="_1pjtly9"
+                                class="setting-section__menu-wrap"
                                 role="button"
                                 aria-disabled="false"
                                 aria-expanded="false"
@@ -2955,7 +2955,7 @@
                               id="Safety guidelines-section-row"
                             >
                               <div
-                                class="_1mw07zbp"
+                                class="app-theme__sidebar-menu-wrapper"
                                 role="button"
                                 aria-disabled="true"
                                 aria-expanded="false"
@@ -2987,8 +2987,8 @@
                                 >
                                   Safety guidelines
                                 </div>
-                                <div class="_kckm7tm">
-                                  <div class="_1rhpnva">
+                                <div class="app-theme__sidebar-icon-wrapper">
+                                  <div class="app-theme__sidebar-icon-content">
                                     <svg
                                       xmlns="http://www.w3.org/2000/svg"
                                       viewBox="0 0 16 16"
@@ -3017,7 +3017,7 @@
                               id="Your submission-section-row"
                             >
                               <div
-                                class="_1mw07zbp"
+                                class="app-theme__sidebar-menu-wrapper"
                                 role="button"
                                 aria-disabled="true"
                                 aria-expanded="false"
@@ -3049,8 +3049,8 @@
                                 >
                                   Your submission
                                 </div>
-                                <div class="_kckm7tm">
-                                  <div class="_1rhpnva">
+                                <div class="app-theme__sidebar-icon-wrapper">
+                                  <div class="app-theme__sidebar-icon-content">
                                     <svg
                                       xmlns="http://www.w3.org/2000/svg"
                                       viewBox="0 0 16 16"
@@ -3080,15 +3080,15 @@
                 </div>
               </div>
               <main id="site-content">
-                <div class="_qss9kbx">
-                  <div class="_8h9q1b" id="lyt-page-container">
-                    <div id="lyt-main-header" class="_1ob7wrd">
+                <div class="site-content__page-wrapper">
+                  <div class="site-content__page-container" id="lyt-page-container">
+                    <div id="lyt-main-header" class="site-content__page-header">
                       <div class="header__logo">
                         <button
                           id="side-nav-toggle"
                           aria-expanded="true"
                           type="button"
-                          class="_m1y9te"
+                          class="header__logo-btn"
                         >
                           <span class="box-border"
                             ><svg
@@ -3112,16 +3112,16 @@
                           </span>
                         </button>
                       </div>
-                      <div class="_g7lz6c">Experience type</div>
+                      <div class="header__logo-btn-text">Experience type</div>
                     </div>
-                    <section class="_92ham2">
+                    <section class="site-content__page-content">
                       <div class="vh-100">
-                        <div class="_czq6d5">
-                          <div class="_1j6mvlwv">
-                            <div class="_foa5ri">
+                        <div class="site-content__page-content-wrapper">
+                          <div class="site-content__content-wrapper">
+                            <div class="site-content__content-list">
                               <section>
                                 <div class="box-border">
-                                  <div class="_mf1jwf">
+                                  <div class="site-content__content-list-header">
                                     <h1
                                       id="FMP-target"
                                       tabindex="-1"
@@ -3135,7 +3135,7 @@
                                 </div>
                               </section>
                             </div>
-                            <div class="_v08k6k">
+                            <div class="site-content__content-menu">
                               <div role="radiogroup">
                                 <button
                                   class="list-group__btn"
@@ -3145,14 +3145,14 @@
                                   data-testid="offline-button"
                                   theme="[object Object]"
                                 >
-                                  <div class="_114nnaka">
-                                    <div class="_19uq0tn">In person</div>
-                                    <div class="_epst94">
+                                  <div class="site-content__content-menu-list">
+                                    <div class="site-content__menu-header">In person</div>
+                                    <div class="site-content__menu-desc">
                                       Guests will join you in the real world,
                                       for hands-on participation.
                                     </div>
                                   </div>
-                                  <div class="_xv9qyz">
+                                  <div class="site-content__menu-icon">
                                     <svg
                                       viewBox="0 0 32 32"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -3172,7 +3172,7 @@
                                     </svg>
                                   </div>
                                 </button>
-                                <div class="_116pv12">
+                                <div class="site-content__menu-list">
                                   <button
                                     class="list-group__btn"
                                     type="button"
@@ -3181,14 +3181,14 @@
                                     data-testid="online-button"
                                     theme="[object Object]"
                                   >
-                                    <div class="_114nnaka">
-                                      <div class="_19uq0tn">Online only</div>
-                                      <div class="_epst94">
+                                    <div class="site-content__content-menu-list">
+                                      <div class="site-content__menu-header">Online only</div>
+                                      <div class="site-content__menu-desc">
                                         Guests will join you virtually, using
                                         Zoom video conferencing software.
                                       </div>
                                     </div>
-                                    <div class="_xv9qyz">
+                                    <div class="site-content__menu-icon">
                                       <svg
                                         viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg"
@@ -3213,19 +3213,19 @@
                             </div>
                           </div>
                         </div>
-                        <footer class="_1jkbg3x">
-                          <div class="_1ugaxv">
+                        <footer class="footer__item-list">
+                          <div class="footer__item-list-wrapper">
                             <div aria-hidden="true">
-                              <div class="_mhow73">
-                                <div class="_hgs47m">
-                                  <div class="_10ejfg4u">
-                                    <div class="_r4xoi70">
+                              <div class="footer__item-progress">
+                                <div class="footer__progress-active-wrapper">
+                                  <div class="footer__progress-active-content">
+                                    <div class="footer__progress-active-bar">
                                       <div
                                         role="progressbar"
                                         aria-valuenow="1"
                                         aria-valuemin="0"
                                         aria-valuemax="23"
-                                        class="_1n5rojs1"
+                                        class="footer__progressbar"
                                         style="
                                           transform: translate3d(
                                             -96%,
@@ -3240,11 +3240,11 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_13duxcu">
+                          <div class="footer__progressbar-inactive">
                             <div></div>
                             <div data-showat="largeAndAbove">
-                              <div class="_1yid1zh">
-                                <div class="_1jxswo5">22 items to submit</div>
+                              <div class="footer__progressbar-status-wrap">
+                                <div class="footer__progressbar-status-text">22 items to submit</div>
                               </div>
                             </div>
                             <button
@@ -3261,7 +3261,7 @@
                       </div>
                     </section>
                   </div>
-                  <div class="_pjq3gx"></div>
+                  <div class="site-main__spacer"></div>
                 </div>
               </main>
             </div>
