--- a/help.html
+++ b/help.html
@@ -1523,7 +1523,7 @@
                                                                               class="_18dgbyf"
                                                                             >
                                                                               <div
-                                                                                class="_hgs47m"
+                                                                                class="footer__progress-active-wrapper"
                                                                               >
                                                                                 <div
                                                                                   class="cell-middle"
@@ -1551,7 +1551,7 @@
                                                                                   </svg>
                                                                                 </div>
                                                                                 <div
-                                                                                  class="_10ejfg4u"
+                                                                                  class="footer__progress-active-content"
                                                                                 >
                                                                                   <span
                                                                                     class="_1yhl0pta"
@@ -1715,10 +1715,10 @@
                                                                               class="_18dgbyf"
                                                                             >
                                                                               <div
-                                                                                class="_hgs47m"
+                                                                                class="footer__progress-active-wrapper"
                                                                               >
                                                                                 <div
-                                                                                  class="_10ejfg4u"
+                                                                                  class="footer__progress-active-content"
                                                                                 >
                                                                                   <span
                                                                                     class="_1fjguvke"
@@ -1910,7 +1910,7 @@
                                                                       class="_18dgbyf"
                                                                     >
                                                                       <div
-                                                                        class="_hgs47m"
+                                                                        class="footer__progress-active-wrapper"
                                                                       >
                                                                         <div
                                                                           class="cell-middle"
@@ -1938,7 +1938,7 @@
                                                                           </svg>
                                                                         </div>
                                                                         <div
-                                                                          class="_10ejfg4u"
+                                                                          class="footer__progress-active-content"
                                                                         >
                                                                           <span
                                                                             class="_1yhl0pta"
@@ -2067,10 +2067,10 @@
                                                                       class="_18dgbyf"
                                                                     >
                                                                       <div
-                                                                        class="_hgs47m"
+                                                                        class="footer__progress-active-wrapper"
                                                                       >
                                                                         <div
-                                                                          class="_10ejfg4u"
+                                                                          class="footer__progress-active-content"
                                                                         >
                                                                           <span
                                                                             class="_1fjguvke"
@@ -2203,7 +2203,7 @@
                                                                     class="_18dgbyf"
                                                                   >
                                                                     <div
-                                                                      class="_hgs47m"
+                                                                      class="footer__progress-active-wrapper"
                                                                     >
                                                                       <div
                                                                         class="cell-middle"
@@ -2231,7 +2231,7 @@
                                                                         </svg>
                                                                       </div>
                                                                       <div
-                                                                        class="_10ejfg4u"
+                                                                        class="footer__progress-active-content"
                                                                       >
                                                                         <span
                                                                           class="_1yhl0pta"
@@ -2359,10 +2359,10 @@
                                                                     class="_18dgbyf"
                                                                   >
                                                                     <div
-                                                                      class="_hgs47m"
+                                                                      class="footer__progress-active-wrapper"
                                                                     >
                                                                       <div
-                                                                        class="_10ejfg4u"
+                                                                        class="footer__progress-active-content"
                                                                       >
                                                                         <span
                                                                           class="_1fjguvke"
