--- a/payment.html
+++ b/payment.html
@@ -682,7 +682,7 @@
                                                                   class="_1wcpnjd"
                                                                 >
                                                                   <div
-                                                                    class="_hgs47m"
+                                                                    class="footer__progress-active-wrapper"
                                                                   >
                                                                     <div
                                                                       class="cell-middle"
@@ -732,7 +732,7 @@
                                                                       </div>
                                                                     </div>
                                                                     <div
-                                                                      class="_10ejfg4u"
+                                                                      class="footer__progress-active-content"
                                                                     >
                                                                       <div>
                                                                         <span
