--- a/places.html
+++ b/places.html
@@ -387,7 +387,7 @@
                                 <div class="c3dtyuj dir dir-ltr">
                                   <div class="box-border">
                                     <div class="_1bpu39e">Bar</div>
-                                    <div class="_mf1jwf">
+                                    <div class="site-content__content-list-header">
                                       <h1
                                         id="FMP-target"
                                         tabindex="-1"
@@ -16607,7 +16607,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="_v08k6k">
+                              <div class="site-content__content-menu">
                                 <div
                                   id="address"
                                   aria-disabled="false"
