--- a/preferences.html
+++ b/preferences.html
@@ -271,7 +271,7 @@
                               <div class="relative">
                                 <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
-                                    <div class="_hgs47m">
+                                    <div class="footer__progress-active-wrapper">
                                       <div class="va-top-h">
                                         <div class="hero-banner__label">
                                           Preferred language
@@ -303,7 +303,7 @@
                                 </div>
                                 <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
-                                    <div class="_hgs47m">
+                                    <div class="footer__progress-active-wrapper">
                                       <div class="va-top-h">
                                         <div class="hero-banner__label">
                                           Preferred language
@@ -751,7 +751,7 @@
                                 </div>
                                 <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
-                                    <div class="_hgs47m">
+                                    <div class="footer__progress-active-wrapper">
                                       <div class="va-top-h">
                                         <div class="hero-banner__label">
                                           Preferred currency
@@ -785,7 +785,7 @@
                                 </div>
                                 <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
-                                    <div class="_hgs47m">
+                                    <div class="footer__progress-active-wrapper">
                                       <div class="va-top-h">
                                         <div class="hero-banner__label">
                                           Preferred currency
@@ -990,7 +990,7 @@
                                 </div>
                                 <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
-                                    <div class="_hgs47m">
+                                    <div class="footer__progress-active-wrapper">
                                       <div class="va-top-h">
                                         <div class="hero-banner__label">Time zone</div>
                                         <div
@@ -1022,7 +1022,7 @@
                                 </div>
                                 <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
-                                    <div class="_hgs47m">
+                                    <div class="footer__progress-active-wrapper">
                                       <div class="va-top-h">
                                         <div class="hero-banner__label">Time zone</div>
                                       </div>
@@ -1978,7 +1978,7 @@
                                   <div class="notification__container-wrapper">
                                     <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
-                                        <div class="_hgs47m">
+                                        <div class="footer__progress-active-wrapper">
                                           <div class="va-top-h">
                                             <div class="hero-banner__label">
                                               Preferred language
@@ -2012,7 +2012,7 @@
                                     </div>
                                     <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
-                                        <div class="_hgs47m">
+                                        <div class="footer__progress-active-wrapper">
                                           <div class="va-top-h">
                                             <div class="hero-banner__label">
                                               Preferred language
@@ -2293,7 +2293,7 @@
                                     </div>
                                     <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
-                                        <div class="_hgs47m">
+                                        <div class="footer__progress-active-wrapper">
                                           <div class="va-top-h">
                                             <div class="hero-banner__label">
                                               Preferred currency
@@ -2327,7 +2327,7 @@
                                     </div>
                                     <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
-                                        <div class="_hgs47m">
+                                        <div class="footer__progress-active-wrapper">
                                           <div class="va-top-h">
                                             <div class="hero-banner__label">
                                               Preferred currency
@@ -2535,7 +2535,7 @@
                                     </div>
                                     <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
-                                        <div class="_hgs47m">
+                                        <div class="footer__progress-active-wrapper">
                                           <div class="va-top-h">
                                             <div class="hero-banner__label">
                                               Time zone
@@ -2569,7 +2569,7 @@
                                     </div>
                                     <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
-                                        <div class="_hgs47m">
+                                        <div class="footer__progress-active-wrapper">
                                           <div class="va-top-h">
                                             <div class="hero-banner__label">
                                               Time zone
