--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -298,8 +298,8 @@
                                   </div>
                                 </div>
                                 <div class="_ttfedy0">
-                                  <div class="_hgs47m">
-                                    <div class="_10ejfg4u">
+                                  <div class="footer__progress-active-wrapper">
+                                    <div class="footer__progress-active-content">
                                       <div style="margin-right: 24px">
                                         <label
                                           class="explore-filter-menu__group-size-label"
@@ -698,8 +698,8 @@
                                       </div>
                                     </div>
                                     <div class="_ttfedy0">
-                                      <div class="_hgs47m">
-                                        <div class="_10ejfg4u">
+                                      <div class="footer__progress-active-wrapper">
+                                        <div class="footer__progress-active-content">
                                           <div style="margin-right: 24px">
                                             <label
                                               class="explore-filter-menu__group-size-label"
