--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -24,7 +24,7 @@
         <div dir="ltr">
           <header role="banner" class="_8iqo2b">
             <div class="_19trzwd">
-              <div class="_hgs47m">
+              <div class="footer__progress-active-wrapper">
                 <div class="cell-middle">
                   <div>
                     <div class="_ousp44">
@@ -119,7 +119,7 @@
                     <div class="_shsmsj"></div>
                   </div>
                 </div>
-                <div class="_10ejfg4u">
+                <div class="footer__progress-active-content">
                   <div>
                     <div class="inherit-hide-print">
                       <div class="_dx84z0">
