--- a/profile.html
+++ b/profile.html
@@ -863,7 +863,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             >
                                           </div>
                                           <div class="_1ou8uzt">
-                                            <div class="_v08k6k">
+                                            <div class="site-content__content-menu">
                                               <style>
                                                 :root {
                                                   --reach-combobox: 1;
@@ -2014,7 +2014,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       >
                                     </div>
                                     <div class="_1ou8uzt">
-                                      <div class="_v08k6k">
+                                      <div class="site-content__content-menu">
                                         <style>
                                           :root {
                                             --reach-combobox: 1;
@@ -3300,7 +3300,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                           <div>The Airbnb community works best when its members know and trust each other. That’s why, before booking a home or experience, or becoming a host, we may ask you to confirm some account info.</div>
                         </div>
                         <div style="margin-top: 16px">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="va-top">
                               <div style="margin-top: 2px; margin-right: 16px">
                                 <svg
@@ -3349,7 +3349,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                           </div>
                         </div>
                         <div style="margin-top: 16px">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="va-top">
                               <div style="margin-top: 2px; margin-right: 16px">
                                 <svg
