--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -323,7 +323,7 @@
                                         tabindex="-1"
                                         class="_1wcpnjd"
                                       >
-                                        <div class="_hgs47m">
+                                        <div class="footer__progress-active-wrapper">
                                           <div class="cell-middle">
                                             <div>
                                               <div class="_18z8fput">
@@ -367,7 +367,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_10ejfg4u">
+                                          <div class="footer__progress-active-content">
                                             <div>
                                               <span dir="ltr">•••• 3765</span>
                                             </div>
