--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -41,7 +41,7 @@
           <div>
             <header role="banner" class="_8iqo2b">
               <div class="_19trzwd">
-                <div class="_hgs47m">
+                <div class="footer__progress-active-wrapper">
                   <div class="cell-middle">
                     <div>
                       <div class="contents">
@@ -85,7 +85,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="_10ejfg4u">
+                  <div class="footer__progress-active-content">
                     <div>
                       <div class="inherit-hide-print">
                         <div class="_dx84z0">
