--- a/resources.html
+++ b/resources.html
@@ -31,9 +31,9 @@
             <div class="_ousp44">
               <header role="banner" class="_1eqc9dx">
                 <div class="_dd1xod">
-                  <div class="_hgs47m">
+                  <div class="footer__progress-active-wrapper">
                     <div class="cell-middle">
-                      <div class="_hgs47m">
+                      <div class="footer__progress-active-wrapper">
                         <div class="cell-middle">
                           <a
                             href="/?logo=1"
@@ -62,7 +62,7 @@
                               </div></div
                           ></a>
                         </div>
-                        <div class="_10ejfg4u"></div>
+                        <div class="footer__progress-active-content"></div>
                         <div class="cell-middle">
                           <div style="margin-right: 16px">
                             <div class="_1ltxwi4">
@@ -81,7 +81,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="_10ejfg4u">
+                    <div class="footer__progress-active-content">
                       <div data-showat="mediumAndAbove">
                         <div style="margin-left: 8px">
                           <div class="inherit-hide-print">
