--- a/edit/bring.html
+++ b/edit/bring.html
@@ -170,7 +170,7 @@
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="packing-list-1"
                                       >
-                                        <div class="_194uxgy3">
+                                        <div class="app-theme__sidebar-expandable-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
                                             What guests should bring
                                           </div>
@@ -226,7 +226,7 @@
                               id="General settings-section-row"
                             >
                               <div
-                                class="_1pjtly9"
+                                class="setting-section__menu-wrap"
                                 role="button"
                                 aria-disabled="false"
                                 aria-expanded="false"
@@ -258,7 +258,7 @@
                                 >
                                   General settings
                                 </div>
-                                <div class="_kckm7tm">
+                                <div class="app-theme__sidebar-icon-wrapper">
                                   <span class="_xb1ud6">3 NEW</span>
                                 </div>
                               </div>
@@ -270,7 +270,7 @@
                               id="Price settings-section-row"
                             >
                               <div
-                                class="_1pjtly9"
+                                class="setting-section__menu-wrap"
                                 role="button"
                                 aria-disabled="false"
                                 aria-expanded="false"
@@ -302,7 +302,7 @@
                                 >
                                   Price settings
                                 </div>
-                                <div class="_kckm7tm">
+                                <div class="app-theme__sidebar-icon-wrapper">
                                   <span class="_xb1ud6">1 NEW</span>
                                 </div>
                               </div>
@@ -315,15 +315,15 @@
                 </div>
               </div>
               <main id="site-content">
-                <div class="_qss9kbx">
-                  <div class="_8h9q1b" id="lyt-page-container">
-                    <div id="lyt-main-header" class="_1ob7wrd">
+                <div class="site-content__page-wrapper">
+                  <div class="site-content__page-container" id="lyt-page-container">
+                    <div id="lyt-main-header" class="site-content__page-header">
                       <div class="header__logo">
                         <button
                           id="side-nav-toggle"
                           aria-expanded="true"
                           type="button"
-                          class="_m1y9te"
+                          class="header__logo-btn"
                         >
                           <span class="box-border"
                             ><svg
@@ -347,9 +347,9 @@
                           </span>
                         </button>
                       </div>
-                      <div class="_g7lz6c">What guests should bring</div>
+                      <div class="header__logo-btn-text">What guests should bring</div>
                     </div>
-                    <section class="_92ham2">
+                    <section class="site-content__page-content">
                       <div
                         class="_1p3gdcm"
                         id="myx-container"
@@ -408,7 +408,7 @@
                                               theme="[object Object]"
                                             >
                                               <div class="_1o7kvyb">
-                                                <div class="_19uq0tn">Yes</div>
+                                                <div class="site-content__menu-header">Yes</div>
                                               </div>
                                             </button>
                                           </div>
@@ -422,7 +422,7 @@
                                               theme="[object Object]"
                                             >
                                               <div class="_1o7kvyb">
-                                                <div class="_19uq0tn">
+                                                <div class="site-content__menu-header">
                                                   No, guests just need to show
                                                   up
                                                 </div>
@@ -863,7 +863,7 @@
                       </div>
                     </section>
                   </div>
-                  <div class="_pjq3gx"></div>
+                  <div class="site-main__spacer"></div>
                 </div>
               </main>
             </div>
