--- a/login-security.html
+++ b/login-security.html
@@ -284,7 +284,7 @@
                                         </div>
                                         <div class="border-bottom-muted">
                                           <div style="margin-top: 24px">
-                                            <div class="_hgs47m">
+                                            <div class="footer__progress-active-wrapper">
                                               <div class="va-top-h">
                                                 <div class="hero-banner__label">
                                                   Password
@@ -318,7 +318,7 @@
                                         </div>
                                         <div class="border-bottom-muted">
                                           <div style="margin-top: 24px">
-                                            <div class="_hgs47m">
+                                            <div class="footer__progress-active-wrapper">
                                               <div class="va-top-h">
                                                 <div class="hero-banner__label">
                                                   Password
@@ -487,7 +487,7 @@
                                                       </svg>
                                                     </div>
                                                     <div class="_1n9nq7g">
-                                                      <div class="_hgs47m">
+                                                      <div class="footer__progress-active-wrapper">
                                                         <div class="va-top-h">
                                                           <div
                                                             class="breadcrumb__text"
@@ -1417,7 +1417,7 @@
                                           </div>
                                           <div class="border-bottom-muted">
                                             <div style="margin-top: 24px">
-                                              <div class="_hgs47m">
+                                              <div class="footer__progress-active-wrapper">
                                                 <div class="va-top-h">
                                                   <div class="hero-banner__label">
                                                     Password
@@ -1451,7 +1451,7 @@
                                           </div>
                                           <div class="border-bottom-muted">
                                             <div style="margin-top: 24px">
-                                              <div class="_hgs47m">
+                                              <div class="footer__progress-active-wrapper">
                                                 <div class="va-top-h">
                                                   <div class="hero-banner__label">
                                                     Password
@@ -1634,7 +1634,7 @@
                                                         </svg>
                                                       </div>
                                                       <div class="_1n9nq7g">
-                                                        <div class="_hgs47m">
+                                                        <div class="footer__progress-active-wrapper">
                                                           <div class="va-top-h">
                                                             <div
                                                               class="breadcrumb__text"
