--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -287,8 +287,8 @@
                                       </p>
                                       <div class="_25vsd5">
                                         <div class="_ttfedy0">
-                                          <div class="_hgs47m">
-                                            <div class="_10ejfg4u">
+                                          <div class="footer__progress-active-wrapper">
+                                            <div class="footer__progress-active-content">
                                               <div style="margin-right: 24px">
                                                 <label
                                                   class="explore-filter-menu__group-size-label"
@@ -873,8 +873,8 @@
                                             </p>
                                             <div class="_25vsd5">
                                               <div class="_ttfedy0">
-                                                <div class="_hgs47m">
-                                                  <div class="_10ejfg4u">
+                                                <div class="footer__progress-active-wrapper">
+                                                  <div class="footer__progress-active-content">
                                                     <div
                                                       style="margin-right: 24px"
                                                     >
