--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -729,7 +729,7 @@
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="group-size-v2"
                                       >
-                                        <div class="_194uxgy3">
+                                        <div class="app-theme__sidebar-expandable-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">Group size</div>
                                           <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
@@ -1006,15 +1006,15 @@
                 </div>
               </div>
               <main id="site-content">
-                <div class="_qss9kbx">
-                  <div class="_8h9q1b" id="lyt-page-container">
-                    <div id="lyt-main-header" class="_1ob7wrd">
+                <div class="site-content__page-wrapper">
+                  <div class="site-content__page-container" id="lyt-page-container">
+                    <div id="lyt-main-header" class="site-content__page-header">
                       <div class="header__logo">
                         <button
                           id="side-nav-toggle"
                           aria-expanded="true"
                           type="button"
-                          class="_m1y9te"
+                          class="header__logo-btn"
                         >
                           <span class="box-border"
                             ><svg
@@ -1038,19 +1038,19 @@
                           </span>
                         </button>
                       </div>
-                      <div class="_g7lz6c">Group size</div>
+                      <div class="header__logo-btn-text">Group size</div>
                       <div class="margin__left-auto">
                         <button type="button" class="btn-outline-small">Preview</button>
                       </div>
                     </div>
-                    <section class="_92ham2">
+                    <section class="site-content__page-content">
                       <div class="vh-100">
-                        <div class="_czq6d5">
-                          <div class="_1j6mvlwv">
-                            <div class="_foa5ri">
+                        <div class="site-content__page-content-wrapper">
+                          <div class="site-content__content-wrapper">
+                            <div class="site-content__content-list">
                               <section>
                                 <div class="box-border">
-                                  <div class="_mf1jwf">
+                                  <div class="site-content__content-list-header">
                                     <h1
                                       id="FMP-target"
                                       tabindex="-1"
@@ -1222,19 +1222,19 @@
                             </div>
                           </div>
                         </div>
-                        <footer class="_1jkbg3x">
-                          <div class="_1ugaxv">
+                        <footer class="footer__item-list">
+                          <div class="footer__item-list-wrapper">
                             <div aria-hidden="true">
-                              <div class="_mhow73">
-                                <div class="_hgs47m">
-                                  <div class="_10ejfg4u">
-                                    <div class="_r4xoi70">
+                              <div class="footer__item-progress">
+                                <div class="footer__progress-active-wrapper">
+                                  <div class="footer__progress-active-content">
+                                    <div class="footer__progress-active-bar">
                                       <div
                                         role="progressbar"
                                         aria-valuenow="20"
                                         aria-valuemin="0"
                                         aria-valuemax="22"
-                                        class="_1n5rojs1"
+                                        class="footer__progressbar"
                                         style="
                                           transform: translate3d(-9%, 0px, 0px);
                                         "
@@ -1245,7 +1245,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_13duxcu">
+                          <div class="footer__progressbar-inactive">
                             <button
                               id="lyt-back-button"
                               type="button"
@@ -1254,8 +1254,8 @@
                               Back
                             </button>
                             <div data-showat="largeAndAbove">
-                              <div class="_1yid1zh">
-                                <div class="_1jxswo5">2 items to submit</div>
+                              <div class="footer__progressbar-status-wrap">
+                                <div class="footer__progressbar-status-text">2 items to submit</div>
                               </div>
                             </div>
                             <button
@@ -1271,7 +1271,7 @@
                       </div>
                     </section>
                   </div>
-                  <div class="_pjq3gx"></div>
+                  <div class="site-main__spacer"></div>
                 </div>
               </main>
             </div>
